--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
     "react-devtools": "^4.28.0",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "tailwindcss": "^3.3.3"
   }
 }
