--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "shadcn-ui": "^0.3.0",
+    "speak-tts": "^2.0.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
