--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
