--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,73 @@
-uvicorn[standard]
-fastapi
-pandas
-numpy
-python-multipart
-tensorflow
-openai
+absl-py==2.1.0
+annotated-types==0.6.0
+anyio==4.3.0
+astunparse==1.6.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+distro==1.9.0
+dnspython==2.6.1
+email-validator==2.1.1
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.2
+flatbuffers==24.3.25
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.63.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+jinja2==3.1.4
+keras==3.3.3
+libclang==18.1.1
+markdown==3.6
+markdown-it-py==3.0.0
+markupsafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+namex==0.0.8
+numpy==1.26.4
+openai==1.25.2
+opt-einsum==3.3.0
+optree==0.11.0
+orjson==3.10.3
+packaging==24.0
+pandas==2.2.2
+protobuf==4.25.3
+pydantic==2.7.1
+pydantic-core==2.18.2
+pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+pyyaml==6.0.1
+requests==2.31.0
+rich==13.7.1
+setuptools==69.5.1
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+termcolor==2.4.0
+tqdm==4.66.4
+typer==0.12.3
+typing-extensions==4.11.0
+tzdata==2024.1
+ujson==5.9.0
+urllib3==2.2.1
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
+werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
